# code-locate-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
code_locate/: __init__.py  cli.py  commands.py  expand.py  models.py  ranking.py  search.py  search_plan.py  symbols.py
tests/: test_cli.py  test_expand.py  test_query.py  test_search_plan.py  test_symbols.py
