[project]
name = "code-locate"
version = "0.1.0"
description = "Agent-facing CLI for locating likely code entry points from issue search plans."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "code-locate authors" }]
dependencies = [
  "tree-sitter>=0.20",
  "tree-sitter-language-pack>=0.7",
]

[project.scripts]
code-locate = "code_locate.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
